# auto-research

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/auto_research/: __init__.py  cli.py  codex.py  reports.py  runner.py  state.py  tasklog.py
tests/: test_framework.py
