[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-research"
version = "0.1.0"
description = "A small Codex-based auto-research framework with resumable sessions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
auto-research = "auto_research.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
